added PhotoPage and Video Page

--- a/src/components/Admin/AdminNavbar/AdminNavbar.module.scss
+++ b/src/components/Admin/AdminNavbar/AdminNavbar.module.scss
@@ -34,6 +34,7 @@
     text-decoration: none;
     margin-bottom: 10px;
     font-size: 18px;
+    filter: brightness(0) saturate(100%) invert(87%) sepia(27%) saturate(4016%) hue-rotate(328deg) brightness(103%) contrast(102%);
   }
 }
 
