--- a/src/pages/AdminPhotoPage/AdminPhotoPage.module.scss
+++ b/src/pages/AdminPhotoPage/AdminPhotoPage.module.scss
@@ -6,7 +6,7 @@ body {
   width:  1440px;
   min-height: 100vh;
   display: flex;
-  background-color: #fff;
+  background-color: #000;
   margin: 0 auto;
 }
 
@@ -16,178 +16,17 @@ body {
   width: 84%;
 }
 
-.content_imgInput {
+.content_fileInput {
   width: 45%;
   margin-left: 5%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
 }
 
-.imgInputTitle {
+.fileInputTitle {
   margin-bottom: 30px;
   margin-left: 3%;
   font-size: 32px;
   color:#fff;
 }
-
-.imgInputWrapper {
-  width: 100%;
-  position: relative;
-  margin: 15px 0;
-  text-align: center;
-}
-
-.imgInput {
-  opacity: 0;
-  visibility: hidden;
-  position: absolute;
-}
-
-.imgInputIconWrapper {
-  height: 60px;
-  width: 60px;
-  margin-right: 15px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-.imgInputBtnText {
-  line-height: 1;
-  margin-top: 45px;
-  font-size: 22px;
-}
-
-.imgInputBtn {
-  width: 450px;
-  height: 440px;
-  background: #202020;
-  color: #BFBFBF;
-  font-size: 1.125rem;
-  font-weight: 700;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  border-radius: 13px;
-  cursor: pointer;
-  margin: 0 auto;
-  overflow: hidden;
-  position: relative;
-  text-align: center;
-}
-
-.imgInputBtn:before {
-  content: "";
-  position: absolute;
-  border: 17px dashed #BFBFBF;
-  top: -15px;
-  bottom: -15px;
-  left: -15px;
-  right: -15px;
-  border-radius: 28px;
-}
-
-.imgInputLinkWrapper {
-  color: white;
-  font-size: 22px;
-  margin-left: 17px;
-}
-
-.imgInputLinkIcon {
-  margin-left: 15px;
-}
-
-.imgInputLink {
-  color: #fff;
-  width: 100%;
-  border: none;
-  border-bottom: 2px solid #737373;
-  background-color: #000;
-  font-family: "Montserrat", sans-serif;
-  font-size: 18px;
-}
-
-.imgInputLink:focus {
-  outline: none;
-}
-
-.content_textInputs {
-  width: 45%;
-  display: flex;
-  flex-direction: column;
-  color: #FFB03B;
-  margin: 0 10% 0 5%;
-  justify-content: center;
-  font-size: 22px;
-}
-
-.textInputs:first-child {
-  margin-top: 5%;
-}
-
-.textInputs {
-  margin-bottom: 1%;
-}
-
-.textInputsTitle {
-  font-size: 22px;
-  font-weight: 600;
-  margin: 40px 0 10px;
-}
-
-.textInputsTitleFirst {
-  font-size: 22px;
-  font-weight: 600;
-  margin: 0px 0 10px;
-}
-
-.textInput {
-  color: #fff;
-  width: 100%;
-  border: none;
-  border-bottom: 2px solid #737373;
-  background-color: #000;
-  font-family: "Montserrat", sans-serif;
-  font-size: 18px;
-}
-
-.textInput:focus {
-  outline: none;
-}
-
-.viewsInputWrapper {
-  width: 100%;
-}
-
-.viewsInputTitle {
-  font-size: 22px;
-  font-weight: 600;
-  line-height: 27px;
-  margin-top: 60px;
-}
-
-.viewsInput {
-  width: 100%;
-  cursor: pointer;
-  accent-color: #FFB03B;
-  text-emphasis-color: #BFBFBF;
-}
-
-// .viewsInput {
-//   background: linear-gradient(to right, #82CFD0 0%, #82CFD0 50%, #fff 50%, #fff 100%);
-//   border: solid 1px #82CFD0;
-//   border-radius: 8px;
-//   height: 7px;
-//   width: 356px;
-//   outline: none;
-//   transition: background 450ms ease-in;
-//   -webkit-appearance: none;
-// }
-
