--- a/src/pages/AdminVideoPage/AdminVideoPage.module.scss
+++ b/src/pages/AdminVideoPage/AdminVideoPage.module.scss
@@ -1,6 +1,32 @@
+body {
+  background: linear-gradient(90deg, rgba(47,47,47,1) 50%, rgba(0,0,0,1) 50%);
+}
+
 .main_container {
-  width:  100%;
+  width:  1440px;
   min-height: 100vh;
   display: flex;
   background-color: #000;
+  margin: 0 auto;
+}
+
+.video_content {
+  display: flex;
+  justify-content: space-around;
+  width: 84%;
+}
+
+.content_fileInput {
+  width: 45%;
+  margin-left: 5%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+
+.fileInputTitle {
+  margin-bottom: 30px;
+  margin-left: 3%;
+  font-size: 32px;
+  color:#fff;
 }
