--- a/src/index.css
+++ b/src/index.css
@@ -23,3 +23,13 @@ a {
 ul {
   list-style: none;
 }
+
+.app{
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  background-image: url("./assets/icons/background.svg");
+  background-repeat: no-repeat;
+  mix-blend-mode: screen;
+  background-size: cover;
+}
