--- a/src/layout/Header/Header.module.scss
+++ b/src/layout/Header/Header.module.scss
@@ -24,7 +24,8 @@
   &__inner {
     display: flex;
     justify-content: space-between;
-    border-bottom: 1px solid #fff;
+    border-bottom: 2px solid #6B6A6A;
+    padding: 12px;
   }
 
   .menu {
@@ -64,9 +65,16 @@
 
     .star {
       position: absolute;
-      right: 0;
+      right: -5px;
       top: -1%;
+      width: 171px;
     }
+  }
+
+  .search__input {
+    display: flex;
+    justify-content: flex-end;
+    padding-right: 15px;
   }
 }
 
@@ -86,6 +94,9 @@
       .menu__link__active {
         display: none;
       }
+    }
+    .search__input {
+      display: none;
     }
   }
 }
