--- a/src/layout/SearchInput/Search.module.scss
+++ b/src/layout/SearchInput/Search.module.scss
@@ -2,12 +2,10 @@
   margin-top: 11px;
   width: 330px;
   display: flex;
+  justify-content: center;
   border-radius: 8px;
   background-color: #fff;
   height: 33px;
-  position: absolute;
-  top: 55px;
-  right: 6px;
 
 
   &__none {
@@ -37,16 +35,16 @@
 
 @media screen and (max-width: 1024px){
   .search {
-    width: 270px;
+    display: flex;
+    justify-content: center;
     position: absolute;
-    right: 36%;
+    right: 37%;
     top: 13%;
   }
 }
 
 @media screen and (max-width: 768px){
   .search {
-    width: 270px;
     position: absolute;
     right: 33%;
     top: 13%;
