--- a/src/components/ui/modal-window/ModalWindow.scss
+++ b/src/components/ui/modal-window/ModalWindow.scss
@@ -1,7 +1,7 @@
 .fade_block {
   height: 100vh;
   width: 100%;
-  background: rgba(0, 0, 0, 0.4);
+  background: rgba(0, 0, 0, 0.7);
   position: fixed;
   top: 0;
   left: 0;
@@ -50,6 +50,7 @@
       border-radius: 10px;
       background: #FF6D00;
       border: none;
+      cursor: pointer;
 
       &::before {
         content: '';
@@ -66,10 +67,12 @@
 
   &_body {
     position: relative;
-    padding: 10px 40px;
-    height: 400px;
+    padding: 7px;
+    max-height: 630px;
+    max-width: 756px;
     background: url("../../../assets/PhotoPage/grid-box.png") no-repeat;
-    background-size: contain;
+    background-size: cover;
+    overflow: hidden;
 
     &::before {
       content: '';
