--- a/src/pages/AdminPosterPage/AdminPosterPage.module.scss
+++ b/src/pages/AdminPosterPage/AdminPosterPage.module.scss
@@ -1,7 +1,3 @@
-body {
-  background: linear-gradient(90deg, rgba(47,47,47,1) 50%, rgba(0,0,0,1) 50%);
-}
-
 .main_container {
   width:  1440px;
   min-height: 100vh;
@@ -11,23 +7,35 @@ body {
   margin: 0 auto;
 }
 
-.photo_content {
+.advertising_content {
   display: flex;
   justify-content: space-around;
   width: 84%;
 }
 
 .content_fileInput {
-  width: 45%;
-  margin-left: 5%;
+  width: 100%;
+  margin-left: 6%;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
+  padding-right: 10%;
+}
+
+.fileInputTitleWrapper {
+  margin: 30px 0;
 }
 
 .fileInputTitle {
-  margin: 30px 0;
-  margin-left: 3%;
-  font-size: 32px;
-  color:#fff;
+  font-size: 28px;
+  color: #999999;
+
+  &2 {
+    font-size: 32px;
+    color: #FFB03B;
+  }
+}
+
+.FileInputLinkWrapper {
+  width: 60%;
 }
