--- a/src/pages/AdminVideoPage/AdminVideoPage.module.scss
+++ b/src/pages/AdminVideoPage/AdminVideoPage.module.scss
@@ -6,6 +6,7 @@ body {
   width:  1440px;
   min-height: 100vh;
   display: flex;
+  justify-content: flex-end;
   background-color: #000;
   margin: 0 auto;
 }
@@ -25,7 +26,7 @@ body {
 }
 
 .fileInputTitle {
-  margin-bottom: 30px;
+  margin: 30px 0;
   margin-left: 3%;
   font-size: 32px;
   color:#fff;
