--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@ body {
   background-color: #000;
   font-size: 16px;
   font-family: 'Montserrat Alternates', sans-serif;
+  box-sizing: border-box;
 }
 
 code {
