--- a/src/pages/AdminContactsPage/AdminContactsPage.module.scss
+++ b/src/pages/AdminContactsPage/AdminContactsPage.module.scss
@@ -1,6 +1,69 @@
 .main_container {
-  width:  100%;
+  width:  1440px;
   min-height: 100vh;
   display: flex;
+  justify-content: flex-end;
+  flex-wrap: wrap;
   background-color: #000;
+  margin: 0 auto;
+}
+
+.contacts_content {
+  display: flex;
+  justify-content: space-around;
+  width: 84%;
+}
+
+.content_fileInput {
+  width: 45%;
+  margin-left: 5%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+
+.fileInputTitle {
+  margin: 30px 0;
+  margin-left: 3%;
+  font-size: 32px;
+  color:#fff;
+}
+
+.content_textInputs {
+  width: 45%;
+  display: flex;
+  flex-direction: column;
+  color: #FFB03B;
+  margin: 10% 10% 0 5%;
+  justify-content: flex-start;
+  font-size: 22px;
+}
+
+.contactsSocials {
+  width: 84%;
+}
+
+.socialsTitleWrapper {
+  margin-left: 6.4%;
+}
+
+.socialsTitle {
+  color: #FFB03B;
+  font-size: 26px;
+  margin: 60px 0;
+}
+
+.socialsInputsWrapper {
+  margin-left: 6.4%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+
+  & h2 {
+    color: white;
+  }
+
+  & button {
+    margin-right: 11.4%;
+  }
 }
