--- a/src/pages/AdminVideoPage/AdminVideoPage.module.scss
+++ b/src/pages/AdminVideoPage/AdminVideoPage.module.scss
@@ -1,5 +1,5 @@
 body {
-  background: linear-gradient(90deg, rgba(47,47,47,1) 50%, rgba(0,0,0,1) 50%);
+  //background: linear-gradient(90deg, rgba(47,47,47,1) 50%, rgba(0,0,0,1) 50%);
 }
 
 .main_container {
