--- a/src/components/ui/carousel-photos/Carousel.scss
+++ b/src/components/ui/carousel-photos/Carousel.scss
@@ -1,4 +1,4 @@
-.swiperMy {
+.photosSwiper {
   max-height: 603px;
   max-width: 756px;
   border-radius: 10px;
@@ -12,6 +12,7 @@
     width: 131px;
     height: 36px;
     background: url('../../../assets/icons/logo.svg') no-repeat;
+    z-index: 100;
   }
 
   & .swiper-slide {
@@ -38,12 +39,11 @@
   .swiper-slide .image {
     display: block;
     width: 100%;
-    height: 100%;
     object-fit: cover;
   }
 
   .swiper-button-next, .swiper-button-prev  {
-    position: relative;
+    position: absolute;
     top: 50%;
     width: 38px !important;
     height: 38px;
@@ -62,7 +62,6 @@
       width: 18px;
       height: 12px;
       transform: translate(-50%, -50%);
-
     }
   }
 
