--- a/src/pages/AdminPhotoPage/AdminPhotoPage.module.scss
+++ b/src/pages/AdminPhotoPage/AdminPhotoPage.module.scss
@@ -1,6 +1,6 @@
-body {
-  background: linear-gradient(90deg, rgba(47,47,47,1) 50%, rgba(0,0,0,1) 50%);
-}
+//body {
+//  background: linear-gradient(90deg, rgba(47,47,47,1) 50%, rgba(0,0,0,1) 50%);
+//}
 
 .main_container {
   width:  1440px;
