RET-7-VideoPage-roman: Added font Mont for project. Created VideoReport.tsx component. Fixed template in video page

--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,27 @@ body {
   box-sizing: border-box;
 }
 
+@font-face {
+  font-family: "Mont, sans-serif";
+  src: url('assets/fonts/Mont Font Family/Fontfabric - Mont ExtraLight DEMO.otf');
+  font-style: normal;
+  font-weight: normal;
+}
+
+@font-face {
+  font-family: "Mont, sans-serif";
+  src: url('assets/fonts/Mont Font Family/Fontfabric - Mont Heavy DEMO.otf');
+  font-style: normal;
+  font-weight: bold;
+}
+
+@font-face {
+  font-family: "Mont, sans-serif";
+  src: url('assets/fonts/Mont Font Family/MontSemiBold.ttf');
+  font-style: normal;
+  font-weight: 600;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
