--- a/src/components/Video/VideoReport/VideoReport.module.scss
+++ b/src/components/Video/VideoReport/VideoReport.module.scss
@@ -2,6 +2,7 @@
   width: 100%;
   height: 100%;
 
+
   &__prevImage {
     width: 100%;
     object-fit: cover;
@@ -22,11 +23,12 @@
     text-align: left;
 
     & span {
-      font-weight: 500;
+      font-weight: normal;
       font-size: 14px;
       line-height: 18px;
       position: relative;
       padding-left: 30px;
+
 
       &::after {
         position: absolute;
@@ -40,6 +42,7 @@
     }
 
     & h5 {
+      font-family: "Mont, sans-serif";
       font-weight: 600;
       font-size: 20px;
       line-height: 26px;
