--- a/src/components/Event/RecommendationBlock/RecommendationBlock.module.scss
+++ b/src/components/Event/RecommendationBlock/RecommendationBlock.module.scss
@@ -1,7 +1,7 @@
 .recommendations {
   max-width: 985px;
   max-height: 430px;
-  margin: 0 auto;
+  margin: 0 auto 10%;
   position: relative;
   box-sizing: border-box;
   padding: 0 15px;
