--- a/src/pages/EventPage/EventPage.module.scss
+++ b/src/pages/EventPage/EventPage.module.scss
@@ -1,3 +1,6 @@
 .container {
-  padding: 100px 15px;
+  max-width: 1123px;;
+  margin: 0 auto;
+  box-sizing: border-box;
+  padding: 100px 15px 0;
 }
