--- a/src/pages/EventPage/EventPage.module.scss
+++ b/src/pages/EventPage/EventPage.module.scss
@@ -1,6 +1,7 @@
 .container {
-  max-width: 1123px;;
   margin: 0 auto;
   box-sizing: border-box;
   padding: 100px 15px 0;
+  background: url('../../assets/EventPage/background.png') no-repeat;
+  background-size: 100% 100%;
 }
