--- a/src/components/MainPage/PlaceSlider/PlaceSlider.module.scss
+++ b/src/components/MainPage/PlaceSlider/PlaceSlider.module.scss
@@ -1,5 +1,14 @@
+.place_parent_title {
+  color: #000;
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 39px;
+  margin-left: 42%;
+  padding-top: 14%;
+}
+
 .place {
-  margin: 20px auto;
+  margin: 0 auto;
 
   .place__inner {
     display: flex;
@@ -127,8 +136,18 @@
 
 
 @media screen and (max-width: 1025px) {
+  .place_parent_title {
+    color: #000;
+    font-weight: 700;
+    font-size: 32px;
+    line-height: 39px;
+    margin-left: 42%;
+    padding-top: 17%;
+    padding-bottom: 1%;
+  }
+
   .place {
-    margin: 20px auto;
+    margin: 0 auto;
 
     .place__inner {
       display: flex;
@@ -256,6 +275,16 @@
 }
 
 @media screen and (max-width: 943px) {
+  .place_parent_title {
+    color: #000;
+    font-weight: 700;
+    font-size: 32px;
+    line-height: 39px;
+    margin-left: 42%;
+    padding-top: 17%;
+    padding-bottom: 3%;
+  }
+
   .place {
 
     .place__inner {
@@ -418,6 +447,15 @@
 }
 
 @media screen and (max-width: 846px) {
+  .place_parent_title {
+    color: #000;
+    font-weight: 700;
+    font-size: 32px;
+    line-height: 39px;
+    margin-left: 38%;
+    padding-top: 20%;
+    padding-bottom: 6%;
+  }
   .place {
     &__buttons{
       display: flex;
@@ -445,14 +483,10 @@
     }
 
     .place__row {
-      margin-top: 51px;
+      margin-top: 20px;
       width: 162px;
-      height: 303px;
-      margin-top: 51px;
+      height: 305px;
       margin-left: -40px;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
     }
 
     &__descr__text {
@@ -587,5 +621,17 @@
     .topSwiper__left {
       display: block;
     }
+  }
+}
+
+@media screen and (max-width: 426px){
+  .place_parent_title {
+    color: #000;
+    font-weight: 700;
+    font-size: 32px;
+    line-height: 39px;
+    margin-left: 25%;
+    padding-top: 35%;
+    padding-bottom: 6%;
   }
 }
