--- a/src/pages/MainPage/MainPage.module.scss
+++ b/src/pages/MainPage/MainPage.module.scss
@@ -1,9 +1,8 @@
 .MainPage {
-  //display: flex;
-  //flex-direction: column;
-  //min-height: 100vh;
-  //background-image: url("../../assets/icons/background.svg");
-  //background-repeat: no-repeat;
-  //mix-blend-mode: screen;
-  //background-size: cover;
+
+}
+
+.div {
+  background: rgb(0,0,0);
+  background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(83,21,78,1) 51%, rgba(0,0,0,1) 100%);
 }
