--- a/src/components/Photo/PlaceCard/PlaceCard.module.scss
+++ b/src/components/Photo/PlaceCard/PlaceCard.module.scss
@@ -16,7 +16,7 @@
     position: absolute;
     background: linear-gradient(180deg, rgba(0, 0, 0, 0.02) 0%, rgba(0, 0, 0, 0.79) 39.9%, #000000 100%);
     width: 100%;
-    height: 143px;
+    height: 100px;
     border-radius: 8px;
     bottom: 0;
     padding: 0 0 15px;
@@ -28,6 +28,7 @@
   font-size: 20px;
   padding: 10px 30px 0;
   font-weight: 600;
+  margin-bottom: 20px;
 }
 
 .body_subtitle {
@@ -69,7 +70,7 @@
       position: absolute;
       top: 0;
       left: 0;
-      width: 22px;
+      width: 20px;
       height: 17px;
       background: url("../../../assets/icons/eye.svg");
     }
